--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -32,7 +32,8 @@ $modal-window-button-hover-color: #FFFFFF;
 $modal-window-button-bg-color: #E6E6E6;
 $modal-window-button-hover-bg-color: #707070;
 
-$contents-width: 1320px;
+//$contents-width: 1320px;
+$contents-width: 1200px;
 
 $main-menu-bg-url-list: "../images/junenji_front.png", "../images/junenji_chant.png",
 						"../images/junenji_event.png", "../images/junenji_grave.png";
