--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -3,7 +3,8 @@
 @use "common/responsive" as *;
 
 @mixin header-center {
-	max-width: 1920px;
+	max-width: var.$contents-width;
+	//max-width: 1920px;
 	margin: 0 auto; 
 }
 
@@ -12,6 +13,9 @@
 
 	@include tablet {
 		height: 90px;
+		//position: fixed;
+		//position: sticky;
+		//z-index: 2;
 	}
 
 	@include mobile {
@@ -83,7 +87,7 @@
 				white-space: nowrap;
 
 				&-normal {
-					margin-right: 14%;		//74px;
+					margin-right: 16%;		//74px;
 
 					&-list {
 						display : flex;
@@ -221,7 +225,7 @@
 							text-align: center;
 
 							position: relative;
-							z-index: 3;
+							//z-index: 3;
 						}
 
 						@include mobile {
@@ -232,16 +236,16 @@
 							display: none;
 
 							@include tablet {
+								position: fixed;
 								width: 100%;
 								height: 120vh;
-								//opacity: 0;
-								//display: none;
-								z-index: 3;
-								position: fixed;
+								display: none;
+								z-index: 4;
 								top: 0;
 								left: 0;
 
 								overflow-y: scroll;
+								-webkit-overflow-scrolling: touch;
 							}
 						}
 
@@ -254,7 +258,7 @@
 								height: 120vh;
 								top: 0;
 								left: 0;
-								z-index: 2;
+								z-index: 3;
 								display: none;
 							}
 						}
