--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,6 +4,13 @@
 @use "common/var";
 @use "common/responsive" as *;
 
+// 源ノ明朝をwebフォントとして使う
+// 参考サイト：https://yori3.com/trying/%e3%80%90web%e3%83%a1%e3%83%a2%e3%80%91%e6%ba%90%e3%83%8e%e6%98%8e%e6%9c%9d%e3%82%92web%e3%83%95%e3%82%a9%e3%83%b3%e3%83%88%e3%81%a7%e4%bd%bf%e3%81%86%e3%81%a8%e3%81%8d%e3%81%ae%e3%82%b3%e3%83%84/
+@font-face {
+	font-family: '源ノ明朝';
+	src: url('../fonts/SourceHanSerif-Regular.woff') format('woff'), url('../fonts/SourceHanSerif-Regular.otf') format('opentype');
+}
+
 html {
 	font-size: var.$base-font-size;
 }
@@ -16,9 +23,9 @@ html {
 body {
 	overflow-x: hidden;
 	color: var.$font-color;
-	font-family: 'Source Han Serif', sans-serif;
+	font-family: '源ノ明朝', sans-serif;
 
-	background-color: lightgreen;		// デバッグ
+	//background-color: lightgreen;		// デバッグ
 }
 a {
 	text-decoration: none;
@@ -26,8 +33,9 @@ a {
 }
 
 button {
+	color: var.$font-color;
 	cursor: pointer;
-	font-family: 'Source Han Serif', sans-serif;
+	font-family: '源ノ明朝', sans-serif;
 }
 
 img {
