--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,10 @@
 @media screen and (max-width: 960px) {
   .header {
     height: 90px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
   }
 }
 @media screen and (max-width: 520px) {
@@ -175,6 +179,7 @@
     width: 50%;
     height: 3px;
     background-color: #272727;
+    transition: all 0.4s;
   }
 }
 @media screen and (max-width: 960px) {
@@ -232,10 +237,10 @@
   .header-inner-right-mb-menu-list-outer {
     position: fixed;
     width: 100%;
-    height: 120vh;
+    height: 100vh;
     display: none;
-    z-index: 4;
-    top: 0;
+    z-index: 3;
+    top: 90px;
     left: 0;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
@@ -329,7 +334,7 @@
 @media screen and (max-width: 960px) {
   .header-inner-right-mb-menu-list-logo {
     display: block;
-    margin: 39px auto 0;
+    margin: 5vh auto 0;
   }
 }
 @media screen and (max-width: 520px) {
@@ -368,6 +373,42 @@
 @media screen and (max-width: 960px) {
   .header-inner-right-mb-menu-item a:last-of-type {
     padding-bottom: 0;
+  }
+}
+
+.header-inner-right-mb-button.button-header-hamburger {
+  z-index: 99;
+}
+
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-hamburger-icon.active span:nth-of-type(1) {
+    top: 30px;
+    left: 30px;
+    transform: translateY(10px) rotate(-45deg);
+    width: 30%;
+  }
+}
+@media screen and (max-width: 520px) {
+  .header-inner-right-mb-hamburger-icon.active span:nth-of-type(1) {
+    top: 16px;
+    left: 20px;
+  }
+}
+.header-inner-right-mb-hamburger-icon.active span:nth-of-type(2) {
+  opacity: 0;
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-hamburger-icon.active span:nth-of-type(3) {
+    top: 50px;
+    left: 30px;
+    transform: translateY(-10px) rotate(45deg);
+    width: 30%;
+  }
+}
+@media screen and (max-width: 520px) {
+  .header-inner-right-mb-hamburger-icon.active span:nth-of-type(3) {
+    top: 36px;
+    left: 20px;
   }
 }
 
