--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -13,9 +13,11 @@
 
 	@include tablet {
 		height: 90px;
-		//position: fixed;
+		position: fixed;
 		//position: sticky;
-		//z-index: 2;
+		top: 0;
+		left: 0;
+		z-index: 10;
 	}
 
 	@include mobile {
@@ -144,7 +146,6 @@
 					@include tablet {
 						width: 90px;
 						border: none;
-						//z-index: 4;
 						cursor: pointer;
 						text-align: center;
 						
@@ -179,9 +180,10 @@
 							width: 50%;
 							height: 3px;		// ハンバーガーの線の高さ
 							background-color: var.$button-header-hamburger-color;	
+							transition: all .4s;
 						}
 
-						
+						// アニメーションの挙動は下にあるよ
 						&:nth-of-type(1) {
 							@include tablet {
 								top: 26px;
@@ -238,10 +240,10 @@
 							@include tablet {
 								position: fixed;
 								width: 100%;
-								height: 120vh;
+								height: 100vh;
 								display: none;
-								z-index: 4;
-								top: 0;
+								z-index: 3;	
+								top: 90px;		// ヘッダーのwidthと同じ
 								left: 0;
 
 								overflow-y: scroll;
@@ -344,7 +346,7 @@
 
 							@include tablet {
 								display: block;
-								margin: 39px auto 0;
+								margin: 5vh auto 0;
 							}
 
 							@include mobile {
@@ -387,6 +389,48 @@
 						}
 					}
 				}
+			}
+		}
+	}
+}
+
+// ハンバーガーメニューのアイコンアニメーション
+.header-inner-right-mb-button.button-header-hamburger {
+	z-index: 99;
+}
+.header-inner-right-mb-hamburger-icon.active {
+	span {
+		//background-color: var.$modal-window-button-hover-color;
+
+		&:nth-of-type(1) {
+			@include tablet {
+				top: 30px;
+				left: 30px;
+				transform: translateY(10px) rotate(-45deg);
+				width: 30%;
+			}
+
+			@include mobile {
+				top: 16px;
+				left: 20px;
+			}
+		}
+
+		&:nth-of-type(2) {
+			opacity: 0;
+		}
+
+		&:nth-of-type(3) {
+			@include tablet {
+				top: 50px;
+				left: 30px;
+				transform: translateY(-10px) rotate(45deg);
+				width: 30%;
+			}
+
+			@include mobile {
+				top: 36px;
+				left: 20px;
 			}
 		}
 	}
